[package]
name = "framed_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio-tungstenite = {version =  "0.20" , features = ["native-tls"]}
tokio-native-tls = "0.3"

anyhow = "1"
native-tls = "0.2.12"